css/style.css
@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css);
@import url(./fontawesome-free-6.6.0-web/fontawesome-free-6.6.0-web/css/all.css); /*** fallback for local devenv offline typeshit ***/
@import url(style-footer.css);
@import url(./../auth/css/auth-styles.css);

:root {
  --accent-color: #007bff;
  --border-color: #555;
  --input-register-color: #4e4e4e;
  --input-icon-color: #126ccc;
  --main-color: #0056b3;
  --text-color: #333;
  --nav-background: #6e6e6e;
  --link-hover: #ddd;
  --text-mix-color: #fff;
  --random-color: #ddd;
  --footer-random: #fdfddf;
  --price-color: #333 /*#834343  old tricky reish color was an awesome ride bruh*/;
  --fades: background-color 0.3s ease;
  --success-color: #008000;
  --fades-link: background-color 0.1s ease-in-out;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  margin: 0 0 0 0;
  font-family: Roboto, Arial;
  color: var(--text-color);
}

/**********************************
***********************************
      Start  Temporary Header
***********************************
***********************************/

.navbar {
  background: var(--nav-background);
  color: var(--text-mix-color);
  display: flex;
  justify-content: space-around;
  padding: 16px;
  box-shadow: 0 1px 3px -2px black;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  width: 100%;
  height: 60px;
}

.nav-logo {
  display: flex;
  align-items: center;
  gap: 10px;
}

.nav-logo p {
  color: var(--main-color);
  font-size: 20px;
  text-transform: capitalize;
  font-weight: 600;
}

.nav-menu {
  display: flex;
  align-items: center;
  list-style: none;
  gap: 50px;
  color: var(--text-color);
  font-size: 20px;
  font-weight: 500;
}

.nav-menu li {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 3px;
  cursor: pointer;
}

/*
input[type="search"] {
  width: 500px;
}
*/

/*******/


/******** Search shit *********/

.search__bar {
    margin-top: 1rem;
}

.search__bar-container {
    position: relative;
    width: 30rem;
    background: var(--color-gray-900);
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    overflow: hidden;
    padding: 0.6rem 1rem;
    border-radius: var(--card-boder-radius-2);
    color: var(--color-gray-300);
}

.search__bar-container > div {
    width: 100%;
    display: flex;
    align-items: center;
}

.search__bar input {
    background: transparent;
    margin-left: 0.7rem;
    padding: 0.5rem 0;
    width: 100%;
}

.search__bar input::placeholder {
    color: var(--color-gray-300);
}


/**************   general button style ***********************/


.btn {
    display: inline-block;
    width: fit-content;
    padding: 0.6rem 1.2rem;
    background: var(--color-primary);
    border-radius: var (--card-boder-radius-2);
    cursor: pointer;
    transition: var(--transition);
    color: var(--color-white);
}

/*******/

::placeholder {
  color: var(--accent-color);
  font-family: Roboto, Arial;
  font-weight: 500;
}

input {
  padding: 10px;
  border-radius: 5px;
  border: 1px solid #7a7a7a;
}

.nav-menu hr {
  border: none;
  width: 80%;
  height: 3px;
  border-radius: 10px;
  background: #ff4141;
}

.nav-login-cart {
  display: flex;
  align-items: center;
  gap: 45px;
}

.nav-login-cart a {
  color: var(--text-mix-color);
}

.nav-login-cart a:hover {
  color: var(--text-color);
}

.nav-login-cart button {
  width: 157px;
  height: 58px;
  outline: none;
  border: 1px solid #7a7a7a;
  border-radius: 75px;
  color: #515151;
  font-size: 20px;
  font-weight: 500;
  background: white;
  cursor: pointer;
}

.nav-login-cart button:active {
  background: #f3f3f3;
}

.nav-cart-count {
  width: 22px;
  height: 22px;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: -35px;
  margin-left: -55px;
  border-radius: 11px;
  font-size: 14px;
  background: var(--main-color);
  color: white;
}

@media (max-width: 575px) {
  .nav-logo {
    width: auto;
  }

  p.dambwe {
    display: none;
    height: 35px;
    margin-top: 5px;
  }
}

@media (max-width: 1000px) {
  .nav-menu {
    font-size: 20px;
    margin-right: 60px;
  }
}

@media (max-width: 575px) {
  .nav-menu {
    margin-right: 5px;
  }
}

.nav-login-cart {
  text-align: right;
  width: 150px;
}

@media (max-width: 1000px) {
  .nav-login-cart {
    width: auto;
  }
}

@media (max-width: 1000px) {
  .nav-login-cart {
    width: auto;
  }
}

.user-profile {
  border: var(--text-color) solid 2px;
  border-radius: 50px;
  padding: 2px;
  width: 45px;
  height: 45px;
  margin: 3px;
}

.user-profile:hover {
  background: var(--text-mix-color);
  cursor: pointer;
}

.user-profile img:hover {
  border: var(--text-mix-color) solid 2px;
  border-radius: 50px;
  padding: 2px;
}

.user-profile img {
  width: 100%;
  height: 100%;
  border-radius: 50px;
}

/**********************************
***********************************
     End  Temporary Header
***********************************
***********************************/

.hero {
  display: flex;
  align-items: center;
  height: 80vh;
  width: 100%;
  background-image: url('../images/bacola-banner-01.jpg');
  background-position: left center;
  background-size: cover;
  background-repeat: no-repeat;
  padding: 10px 20px
}

.hero2 {
  display: flex;
  align-items: center;
  width: 100%;
  background-image: url('../images/banner-hero.png');
  background-position: center;
  background-size: contain;
  background-repeat: no-repeat;
}

.hero-text {
  margin-top: 40px;
  width: 80%;
  padding: 20px;
  font-size: 38px;
}

.hero-text h1 {
  font-size: 48px;
  margin-bottom: 20px;
}

.hero .btn2 {
  width: auto;
  outline: none;
  border: 1px solid var(--random-color);
  border-radius: 10px;
  font-size: 15px;
  font-weight: 700;
  background: var(--main-color);
  cursor: pointer;
  transition: var(--fades);
  padding: 10px 15px;
}
/* ... */

